# hector_radiation_mapping

./: .gitignore  LICENSE  README.md
hector_gaussian_process/: CMakeLists.txt  package.xml
hector_gaussian_process/scripts/: gp.py  gp_manager.py  gp_node  sample.py  utils.py
hector_radiation_mapping/: CMakeLists.txt  README.md  console commands.txt  package.xml
hector_radiation_mapping/<WORKSPACE_DIRECTORY>/devel/: .catkin
hector_radiation_mapping/config/: params.yaml
hector_radiation_mapping/include/: pch.h
hector_radiation_mapping/include/custom_geotiff/: geotiff_writer.h
hector_radiation_mapping/include/hector_radiation_mapping/exploration/: exploration.h  exploration_manager.h  exploration_map.h  exploration_service.h
hector_radiation_mapping/include/hector_radiation_mapping/hector_radiation_mapping/: radiation_mapping_node.h  sample.h  sampleManager.h  source.h  source_interactive.h
hector_radiation_mapping/include/hector_radiation_mapping/maps/: gridmap.h  pointcloud3d.h
hector_radiation_mapping/include/hector_radiation_mapping/marker/: marker.h  marker_manager.h
hector_radiation_mapping/include/hector_radiation_mapping/models/: model.h  model_exporter.h  model_manager.h
hector_radiation_mapping/include/hector_radiation_mapping/models/baysian_inference/: bayesian_inference.h
hector_radiation_mapping/include/hector_radiation_mapping/models/field_propagation/: field_propagation.h
hector_radiation_mapping/include/hector_radiation_mapping/models/gaussian_process/: gaussian_process.h  gaussian_process_2d.h  gaussian_process_3d.h
hector_radiation_mapping/include/hector_radiation_mapping/models/gpython/: gpython.h  gpython2D.h  gpython3D.h
hector_radiation_mapping/include/hector_radiation_mapping/models/least_squares/: least_squares.h
hector_radiation_mapping/include/hector_radiation_mapping/models/triangulation/: tri_rsd.h  triangulation.h
hector_radiation_mapping/include/hector_radiation_mapping/util/: clock.h  clock_cpu.h  color.h  dddynamic_reconfigure.h  parameters.h  print.h  test.h  tests.h  util.h
hector_radiation_mapping/launch/: mapping.launch  mapping_2D_only.launch  mapping_legacy.launch  sensor_emulator.launch  test_mapping.launch
hector_radiation_mapping/radiation_mapping_exports/runtime/: evaluationSizes.txt  evaluationSizes_1.txt  evaluationSizes_10.txt  evaluationSizes_12.txt  evaluationSizes_13.txt  evaluationSizes_15.txt  evaluationSizes_16.txt  evaluationSizes_17.txt  evaluationSizes_4.txt  evaluationSizes_6.txt  evaluationSizes_8.txt  evaluationSizes_9.txt  evaluationTimes.txt  evaluationTimes_1.txt  evaluationTimes_10.txt  evaluationTimes_12.txt  evaluationTimes_13.txt  evaluationTimes_15.txt  evaluationTimes_16.txt  evaluationTimes_17.txt  evaluationTimes_4.txt  evaluationTimes_6.txt  evaluationTimes_8.txt  evaluationTimes_9.txt  sourcePredTimes_10.txt  sourcePredTimes_17.txt  sourcePredTimes_9.txt  updateSizes__10.txt  updateSizes__17.txt  updateSizes__6.txt  updateSizes__9.txt  updateTimes_.txt  updateTimes__1.txt  updateTimes__10.txt  updateTimes__12.txt  updateTimes__13.txt  updateTimes__15.txt  updateTimes__17.txt  updateTimes__4.txt  updateTimes__6.txt  (+2 more)
hector_radiation_mapping/rviz/: radiationMappingUI.rviz  rqt_radiation_mapping_ui.perspective
hector_radiation_mapping/scripts/: plotting.py
hector_radiation_mapping/src/custom_geotiff/: geotiff_writer.cpp
hector_radiation_mapping/src/exploration/: exploration.cpp  exploration_manager.cpp  exploration_map.cpp  exploration_service.cpp
hector_radiation_mapping/src/hector_radiation_mapping/: radiation_mapping_node.cpp  sampleManager.cpp  source.cpp  source_interactive.cpp
hector_radiation_mapping/src/maps/: gridmap.cpp  pointcloud3d.cpp
hector_radiation_mapping/src/marker/: marker.cpp  marker_arrow.cpp  marker_manager.cpp  marker_sphere.cpp  marker_text.cpp  marker_trajectory.cpp
hector_radiation_mapping/src/models/: model.cpp  model_exporter.cpp  model_manager.cpp
hector_radiation_mapping/src/models/baysian_inference/: baysian_inference.cpp
hector_radiation_mapping/src/models/field_propagation/: field_propagation.cpp
hector_radiation_mapping/src/models/gaussian_process/: gaussian_process.cpp  gaussian_process_2d.cpp  gaussian_process_3d.cpp
hector_radiation_mapping/src/models/gp_py/: gpython.cpp  gpython2D.cpp  gpython3D.cpp
hector_radiation_mapping/src/models/least_squares/: least_squares.cpp
hector_radiation_mapping/src/models/triangulation/: tri_rsd.cpp  triangulation.cpp
hector_radiation_mapping/src/util/: color.cpp  dddynamic_reconfigure.cpp  tests.cpp  util.cpp
hector_radiation_mapping_msgs/: CMakeLists.txt  package.xml
hector_radiation_mapping_msgs/msg/: Sample.msg  Samples.msg
hector_radiation_mapping_msgs/srv/: AddSamplesService.srv  GPEvaluationService.srv
misc/: Turbo.xml  console commands.txt  radiationMappingUI.rviz  rqt_radiation_mapping_ui.perspective
