<?xml version="1.0"?>
<package format="2">
  <name>hector_gaussian_process</name>
  <version>0.0.0</version>
  <description>The Gaussian Process of the hector_radiation_mapping package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="martin.volz@stud.tu-darmstadt.de">Martin Volz</maintainer>
  <maintainer email="jonas.suess@stud.tu-darmstadt.de">Jonas Suess</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <!-- dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <exec_depend>interactive_markers</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <depend>radiation_msgs</depend>
  <depend>hector_radiation_mapping_msgs</depend>
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
